[package]
name = "whois-rust"
version = "1.1.9"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/whois-rust"
homepage = "https://magiclen.org/whois-rust"
keywords = ["whois"]
categories = ["web-programming::websocket"]
description= "This is a WHOIS client library for Rust, inspired by https://github.com/hjr265/node-whois"
readme = "README.md"
license = "MIT"

[badges.travis-ci]
repository = "magiclen/whois-rust"
branch = "master"

[dependencies]
serde_json = "1.0"
regex = "1.3"
lazy_static = "1.4.0"
idna = "0.2"
async-std = {version="1.4", features=["attributes"]}
thiserror = "1.0"
validators = {version="0.20", features = ["serdely"]}
